Natural Highs First Commit

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
 
             android:layout_width="395dp"
             android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -24,9 +24,9 @@
                 android:id="@+id/loginEmail"
                 android:inputType="textEmailAddress"/>
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -40,15 +40,15 @@
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/password"
-                android:id="@+id/loginPassword"
-                android:inputType="textPassword"/>
+                android:hint="@string/phone_number"
+                android:id="@+id/loginPhoneNumber"
+                android:inputType="phone"/>
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
             android:text="@string/login"
@@ -56,14 +56,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/loginButton"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toStartOf="@+id/registerButton"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             app:layout_constraintHorizontal_bias="0.5"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/loginPasswordLayout"/>
+            app:layout_constraintTop_toBottomOf="@+id/loginPasswordLayout" android:textSize="18sp"
+            android:textColor="#009688"/>
 
     <Button
 
@@ -73,25 +72,25 @@
             android:id="@+id/registerButton"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             app:layout_constraintStart_toEndOf="@+id/loginButton"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toTopOf="@+id/loginButton"
-            app:layout_constraintBottom_toBottomOf="@+id/loginButton"/>
+            app:layout_constraintBottom_toBottomOf="@+id/loginButton" android:textSize="18sp"
+            android:textColor="#009688"/>
 
     <Button
 
-            android:text="@string/forgot_password"
+            android:text="Need New Passord?"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:layout_height="40dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/forgotPasswordButton"
-            android:layout_marginTop="16dp"
+            android:id="@+id/newPasswordButton"
+            android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/registerButton"
-            android:textSize="14sp"/>
+            android:textSize="18sp" android:textColor="#009688"/>
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
 
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -102,5 +101,13 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
+    <ImageView
+            android:layout_width="273dp"
+            android:layout_height="134dp" app:srcCompat="@drawable/natural_highs"
+            android:id="@+id/loginNaturalHighsImageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/loginEmailLayout"
+            app:layout_constraintTop_toBottomOf="@+id/loginToolbar" app:layout_constraintStart_toStartOf="parent"
+    />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
