--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
 
             android:layout_width="395dp"
             android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
             android:layout_marginStart="8dp"
             android:id="@+id/newPasswordEmailLayout">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
 
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -28,7 +28,7 @@
                 android:id="@+id/newPasswordEmail"
                 android:inputType="textEmailAddress"/>
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
             android:text="@string/submit_for_new_password"
@@ -38,9 +38,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/submitPasswordButton"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/newPasswordEmailLayout"/>
+            app:layout_constraintTop_toBottomOf="@+id/newPasswordEmailLayout" android:textColor="#009688"
+            android:textSize="18sp"/>
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
 
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -52,4 +53,4 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
