--- a/app/src/main/res/layout/activity_chat_main.xml
+++ b/app/src/main/res/layout/activity_chat_main.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         tools:context="com.example.finalproject.ChatActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
             android:layout_marginTop="0dp"
             android:layout_marginRight="0dp"/>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
             android:focusable="true"
             android:src="@android:drawable/sym_action_chat"/>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/input"/>
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <ListView
 
