--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/appBarLayout">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
 
                 android:id="@+id/mainToolbar"
                 android:layout_width="match_parent"
@@ -29,7 +29,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:minHeight="?attr/actionBarSize"/>
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
 
@@ -38,39 +38,32 @@
             android:text="@string/hello_user"
             android:textSize="18sp"
             android:id="@+id/greetingTextBox"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-    <TextView
-            android:text="Member Since"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/memberSincetTextView"
-            app:layout_constraintTop_toBottomOf="@+id/greetingTextBox" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>
-    <TextView
-            android:text='"This is a quote"'
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/quoteTextView"
-            app:layout_constraintHorizontal_bias="0.5" android:textSize="18sp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/memberSincetTextView" android:layout_marginBottom="350dp"
-            android:fontFamily="@font/diplomata" android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
-    <TextView
-            android:text="Author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/authorTextView"
-            android:textSize="18sp"
-            android:layout_marginBottom="100dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:fontFamily="@font/diplomata" android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/mainWebView"/>
 
-</android.support.constraint.ConstraintLayout>
+    <WebView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/mainWebView"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentRight="false"
+            android:layout_alignParentEnd="true"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/greetingTextBox"
+            android:layout_marginTop="8dp" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
